--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
             </div>
 
             <div v-else id = "school">
-                My school
+                <table>
+                  <tr>
+                    <th>School</th>
+                    <th>Major</th>
+                    <th>Type</th>
+                    <th>Year Conferred</th>
+                  </tr>
+
+                </table>
             </div>
         </div>
 
